--- a/styles/global-styles.css
+++ b/styles/global-styles.css
@@ -1,3 +1,15 @@
+@keyframes transitionIn {
+  from {
+    opacity: 0;
+    transform: rotateX(-10deg);
+  }
+
+  to {
+    opacity: 1;
+    transform: rotateX(0);
+  }
+}
+
 :root {
   --background: #121212;
   --text-color: #f2f2f2;
@@ -15,6 +27,7 @@ html {
 }
 
 body {
+  animation: transitionIn 0.75s;
   font-family: Arial, Helvetica, sans-serif;
   color: var(--text-color);
   background-color: var(--background);
@@ -30,4 +43,10 @@ h3 {
 
 a {
   color: #000;
+}
+
+#outer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
